force-app/main/default/objects/AUP_Destination_User_Event__e/AUP_Destination_User_Event__e.object-meta.xml
<CustomObject>
    <label>AUP Destination User Event</label>
    <pluralLabel>AUP Destination User Events</pluralLabel>
</CustomObject>