force-app/main/default/objects/AUP_Destination_User_Event__e/fields/AD_SEC_ID__c.field-meta.xml
<CustomField>
    <fullName>AD_SEC_ID__c</fullName>
    <label>AD SEC ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>