force-app/main/default/objects/AUP_Destination_User_Event__e/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <label>Alias</label>
    <length>20</length>
    <type>Text</type>
</CustomField>