force-app/main/default/objects/AUP_Destination_User_Event__e/fields/Destination_Org__c.field-meta.xml
<CustomField>
    <fullName>Destination_Org__c</fullName>
    <label>Destination Org</label>
    <length>20</length>
    <type>Text</type>
</CustomField>