force-app/main/default/objects/AUP_Destination_User_Event__e/fields/Federation_Id__c.field-meta.xml
<CustomField>
    <fullName>Federation_Id__c</fullName>
    <label>Federation Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>