force-app/main/default/objects/AUP_Destination_User_Event__e/fields/Groups__c.field-meta.xml
<CustomField>
    <fullName>Groups__c</fullName>
    <label>Groups</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>