force-app/main/default/objects/AUP_Destination_User_Event__e/fields/License_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Name__c</fullName>
    <label>License Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>