force-app/main/default/objects/AUP_Destination_User_Event__e/fields/Permission_Set_Groups__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Groups__c</fullName>
    <label>Permission Set Groups</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>