force-app/main/default/objects/AUP_Destination_User_Event__e/fields/Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets__c</fullName>
    <label>Permission Sets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>