force-app/main/default/objects/AUP_Destination_User_Event__e/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>