force-app/main/default/objects/AUP_Destination_User_Event__e/fields/Queues__c.field-meta.xml
<CustomField>
    <fullName>Queues__c</fullName>
    <label>Queues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>