force-app/main/default/objects/AUP_Destination_User_Event__e/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <label>Role Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>